# IMDB_Kaggle_

./: 1_Prepare_IMDB.ipynb  3_Cleansing_IMDB.ipynb  Cleansing.ipynb  Feature_selection_Eng.ipynb  FinalObject_Modelsindirectory.pkl  IMDB.ipynb  ModelSelection_Finetuning.ipynb  Project Overview - IMDB TV SHOW.docx  README.md  dtype_dict.json  pyproject.toml
