[tool.poetry]
name = "myproject310"
version = "0.1.0"
description = ""
authors = ["GuyYar1 <132554415+GuyYar1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dataprep = "^0.4.5"
requests = "2.31.0"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
missingno = "^0.5.2"
wordcloud = "^1.9.3"
textblob = "^0.18.0.post0"
joblib = "^1.4.2"
prince = "^0.13.0"
scikit-learn = "1.3.2"
numpy = "1.24.4"
plotly = "^5.23.0"
pip = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
